# chess_ai

./: Cargo.toml  output.txt
src/: agent_depth.rs  agent_random.rs  agent_simple.rs  agent_thread.rs  main.rs  score.rs
